# eel6908_ai-fault-attacks

./: .gitignore  README.md
docs/: dumps.txt  pytorch_compilation.md  tf_compilation.md
docs/error_msgs/: log.md
docs/pytorch/: pytorch.md  pytorch_examples.md  pytorch_memorymanagement.md
docs/tfcc/: tfcc_compilation.md
examples/Basic-Application/: CMakeLists.txt  main.cpp
examples/DCGAN-MNIST/: CMakeLists.txt  main.cpp
examples/DCGAN-MNIST/network/: discriminator.h  generator.h
examples/FeedForward/: CMakeLists.txt
examples/NN-Models/: CMakeLists.txt  main.cpp
examples/NN-Models/networks/: net.h
examples/NN-Ownership/: CMakeLists.txt  main.cpp
examples/NN-Submodules/: CMakeLists.txt  main.cpp
examples/NN-Submodules/networks/: net.h
src/FeedForward/: CMakeLists.txt  main.cpp
src/FeedForward/Inference/: CMakeLists.txt  inference.cpp
src/FeedForward/Training/: CMakeLists.txt  training.cpp
src/FeedForward/net/: net.h
